
  [ Colin Watson ]
  * Set PARTMAN_ALREADY_CHECKED when committing changes from the new
    advanced partitioner, to avoid duplicate warnings (LP: #100009).
  * Use debconf escape capability to simplify migration-assistant summary
    handling.
  * Update Japanese keyboard layout handling to match console-setup
    1.7ubuntu18, which uses jp(latin),jp by default (LP: #63915).

  [ Jonathan Riddell ]
  * KDE frontend
    - Disable all widgets in autopartition subchoices
      when selecting another parent choice
    - Fix misplaced widgets on user details page (LP: #86175)
    - Hide error messages from user info at start of each evaluation
    - Use Apport as crash handler when available
    - Add a graphical disk partition widget

  [ Evan Dandrea ]
  * Catch exceptions in migration-assistant to avoid bringing down the
    entire installer.

 -- Evan Dandrea <evand@ubuntu.com>  Tue,  3 Apr 2007 09:59:55 -0400

ubiquity (1.4.6) feisty; urgency=low

  * KDE frontend: Fetch locale from frontend object rather than partition
    tree item, fixing a crash rendering unusable partitions (LP: #99660).
  * Automatic update of included source packages: console-setup
    1.13ubuntu10.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  2 Apr 2007 02:05:20 +0100

ubiquity (1.4.5) feisty; urgency=low

  * Handle migration-assistant/failed-unmount being asked from ma-apply.
  * If installing or removing packages fails, then display a helpful error
    message and try to continue rather than crashing; furthermore, avoid
    installing language packs or removing packages when there are broken
    packages on the target system (LP: #54282, #69470, #80938).
  * Don't crash if Install exits due to SIGINT, SIGTERM, or SIGKILL, since
    these are probably user-generated.
  * Prepare for partman-partitioning/confirm_resize being asked during
    autopartitioning (partman-auto 62ubuntu9).
  * Do a better job of trying to get the exit code of subsidiary processes.