@@ -7,6 +7,7 @@ ubiquity (1.4.7) UNRELEASED; urgency=low
     handling.
   * Update Japanese keyboard layout handling to match console-setup
     1.7ubuntu18, which uses jp(latin),jp by default (LP: #63915).
+  * Display an error dialog if a subsidiary process fails (LP: #92442).
 
   [ Jonathan Riddell ]
   * KDE frontend
